<resources>
    <string name="app_name">Reminder Buddy</string>
    <string name="menu_add">Add</string>
    <string name="menu_settings">Settings</string>
    <string name="button_save">Save</string>
    <string name="button_showdetails">...</string>
    <string name="title_activity_add_remainder">Add Reminder</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_settings">Settings</string>
    <string name="button_export">Export</string>
    <string name="button_import">Import</string>
    <string name="button_purchase">Purchase</string>
    <string name="button_aboutus">About Us</string>
    <string name="title_activity_about_us">About Us</string>
    <string name="link_feedback">Please leave your feedback <a href="mailto:kirangavv@hotmail.com?Subject=Reminder Buddy Feedback" target="_top">feedback@hotmail.com</a></string>
    <string name="link_companyname"><a href="http://www.macsof.com/">http://www.macsof.com/</a></string>
    <string name="contributorsthankyou">Thanks for using our app! Please share this your friends.</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="datetip">*enter date in mm-dd-yyyy format</string>
    <string name="phonetip">*enter phone number in integers with out ISD code</string>
    <string name="backuptip">*no backup available</string>
    <string name="versiontip">*trail version limited to 30 reminders, purchase for unlimited reminders</string>

</resources>
